# django-sample-poetry

./: .gitignore  README.md  manage.py  pyproject.toml
config/: asgi.py  custom_storage.py  urls.py  wsgi.py
config/settings/: local.py  production.py
config/settings/partials/: AUTH.py  BASE.py  INSTALLED_APPS.py  MEDIA.py  STATIC.py  TEMPLATES.py  __init__.py
